Fixed hover on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -55,7 +55,7 @@ body{
         top: 0;
         left: 0;
         width: 20%;
-        padding: 6.4em;
+        padding: 40%;
         border-radius: 10px;
         position: absolute;
         background: $Cyan;
